# github-copilot-thought-diary-app

./: .env.example  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  wsgi.py
.github/: copilot-instructions.md
.github/prompts/: init-python-project-with-uv.prompt.md
app/: __init__.py
app/auth/: __init__.py  routes.py  utils.py
app/database/: __init__.py  config.py
app/diaries/: __init__.py  routes.py
app/models/: __init__.py  thought_diary.py  user.py
app/schemas/: __init__.py  auth.py  diaries.py
app/services/: __init__.py  analyzer.py  examples.py  sentiment_analysis.py
app/system/: __init__.py  routes.py
docs/: application.md  authentication.md  database.md  diaries.md  index.md  sentiment_analysis.md  thought_diary_api.postman_collection.json  usage.md
frontend/: .gitignore  package-lock.json
tests/: conftest.py  test_app.py  test_persistence.py
tests/auth/: test_routes.py
tests/diaries/: __init__.py  test_routes.py
tests/models/: __init__.py  test_thought_diary.py  test_thought_diary_sentiment.py  test_user.py
tests/services/: __init__.py  test_sentiment_analysis.py  test_sentiment_integration.py
tests/system/: test_routes.py
